force-app/main/default/objects/ContentVersion/fields/Create_IC_Program_Material_Record__c.field-meta.xml
<CustomField>
    <fullName>Create_IC_Program_Material_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defaults to unchecked. Only check if you want to also create a PHSS Material record which would result in the content being included in the IC community materials display logic.</description>
    <label>Create IC Program Material Record</label>
    <type>Checkbox</type>
</CustomField>