force-app/main/default/objects/ContentVersion/fields/Disable_Community_Preview__c.field-meta.xml
<CustomField>
    <fullName>Disable_Community_Preview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the file is large or is an Adobe Presenter type PDF or other non-standard PDF then check this box and the IC Community will not attempt to preview the file. For large video files you may want to do the same and leave users with only the download option.</description>
    <label>Disable Community Preview</label>
    <type>Checkbox</type>
</CustomField>