force-app/main/default/objects/ContentVersion/fields/S3_URL__c.field-meta.xml
<CustomField>
    <fullName>S3_URL__c</fullName>
    <label>S3 URL</label>
    <type>Url</type>
</CustomField>