force-app/main/default/objects/ContentVersion/fields/To_Delete__c.field-meta.xml
<CustomField>
    <fullName>To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To_Delete</label>
    <type>Checkbox</type>
</CustomField>